tests/test_io/bad/output/inputing_to_not_input.catala_en.Typecheck
[ERROR] It is impossible to give a definition to a subscope variable not tagged as input or context.

Incriminated subscope:
 --> tests/test_io/bad/inputing_to_not_input.catala_en
  | 
8 |   a scope A
  |   ^
  + Test

Incriminated variable:
 --> tests/test_io/bad/inputing_to_not_input.catala_en
  | 
5 |   output a content integer
  |          ^
  + Test

Incriminated subscope variable definition:
  --> tests/test_io/bad/inputing_to_not_input.catala_en
   | 
14 |   definition a.a equals 0
   |   ^^^^^^^^^^^^^^^^^^^^^^^
   + 
